# sercol

./: lint.sh  pyproject.toml
.github/workflows/: tests.yml
sercol/: __init__.py
